# rust-playground

./: Cargo.toml  justfile  pre-commit-pedantic.sh  pre-commit.sh
approximate_count_distinct/: Cargo.toml
approximate_count_distinct/src/: lib.rs  main.rs
avl_tree/: Cargo.toml
avl_tree/src/: lib.rs  tests.rs
build-env-vars/: Cargo.toml  build.rs
clone_on_mut/: Cargo.toml
clone_on_mut/src/: lib.rs
closures/: Cargo.toml
closures/src/: captures.rs  emulation.rs  main.rs  moved_captures.rs  returning.rs
cnpj/: Cargo.toml
cnpj-cli/: Cargo.toml
cnpj-cli/src/: main.rs
cnpj/src/: check_digits.rs  cnpj.rs  error.rs  lib.rs  parse.rs  parser.rs  unchecked_cnpj.rs
cpf-cnpj/: Cargo.toml
cpf-cnpj-cli/: Cargo.toml
cpf-cnpj-cli/src/: main.rs
cpf-cnpj/src/: check_digits.rs  cnpj.rs  cpf.rs  error.rs  impls.rs  lib.rs  unchecked_cnpj.rs  unchecked_cpf.rs
deterministic-chooser/: Cargo.toml
deterministic-chooser/src/: deterministic_bool_chooser.rs  lib.rs  main.rs  raw.rs
dices_probabilities/: Cargo.toml
dices_probabilities/src/: main.rs
emulated_closures/: Cargo.toml
emulated_closures/src/: composition.rs  lib.rs
emulated_closures/tests/: composition.rs  lib.rs
floating-point-explorer/: Cargo.toml
floating-point-explorer/src/: ansi.rs  args.rs  bit_groups.rs  bits.rs  fpnumber.rs  (+1 more)
fn-bind/: Cargo.toml  build.rs
happy_number/: Cargo.toml
hlist/: Cargo.toml
insertion_order_hash_map/: Cargo.toml
interlace/: Cargo.toml
iters/: Cargo.toml
json-diff/: Cargo.toml
min-max-binary-heap/: Cargo.toml
multi-binary-heap/: Cargo.toml
ratatui-scrolling/: Cargo.toml
ref_count/: Cargo.toml
same-elements/: Cargo.toml
shared_ownership/: Cargo.toml
syn-dump/: Cargo.toml
tailcall/: Cargo.toml
version-sorting/: Cargo.toml
wavelength-to-rgb/: Cargo.toml
(+87 files in other folders)
