[workspace]
resolver = "2"
members = [
    "approximate_count_distinct",
    "avl_tree",
    "build-env-vars",
    "clone_on_mut",
    "closures",
    "deterministic-chooser",
    "emulated_closures",
    "floating-point-explorer",
    "happy_number",
    "insertion_order_hash_map",
    "interlace",
    "ratatui-scrolling",
    "ref_count",
    "shared_ownership",
    "syn-dump",
    "tailcall",
]
