[workspace]
resolver = "2"
members = [
    "approximate_count_distinct",
    "avl_tree",
    "build-env-vars",
    "clone_on_mut",
    "closures",
    "cpf-cnpj",
    "cpf-cnpj-cli",
    "deterministic-chooser",
    "dices_probabilities",
    "emulated_closures",
    "floating-point-explorer",
    "happy_number",
    "hlist",
    "insertion_order_hash_map",
    "interlace",
    "iters",
    "min-max-binary-heap",
    "ratatui-scrolling",
    "ref_count",
    "same-elements",
    "shared_ownership",
    "syn-dump",
    "tailcall",
    "wavelength-to-rgb",
]

[workspace.lints.clippy]
pedantic = "warn"
