[workspace]
resolver = "2"
members = [
    "approximate_count_distinct",
    "avl_tree",
    "build-env-vars",
    "clone_on_mut",
    "closures",
    "cpf-cnpj",
    "cpf-cnpj-cli",
    "deterministic-chooser",
    "dices_probabilities",
    "emulated_closures",
    "floating-point-explorer",
    "fn-bind",
    "happy_number",
    "hlist",
    "insertion_order_hash_map",
    "interlace",
    "iters",
    "json-diff",
    "min-max-binary-heap",
    "ratatui-scrolling",
    "ref_count",
    "same-elements",
    "shared_ownership",
    "syn-dump",
    "tailcall",
    "version-sorting",
    "wavelength-to-rgb",
]

[workspace.lints.clippy]
pedantic = "warn"
